Multiple peer support

--- a/config.yaml
+++ b/config.yaml
@@ -11,14 +11,24 @@ agent:
   consul_query_interval: 5m
 
 bgp:
-  local_as: 12345
-  remote_as: 6789
-  # override the peer IP to use instead of auto discovering
-  peer_ip: 10.10.10.1
-  communities:
-    - asn:nnnn
-    - asn:nnnn
-  origin: igp
+  - local_as: 12345
+    remote_as: 6789
+    # override the peer IP to use instead of auto discovering
+    peer_ip: 10.10.10.1
+    communities:
+      - asn:nnnn
+      - asn:nnnn
+    origin: igp
+  - local_as: 12345
+    remote_as: 6789
+    # override the peer IP to use instead of auto discovering
+    peer_ip: 10.10.10.2
+    communities:
+      - asn:nnnn
+      - asn:nnnn
+    origin: igp
+
+
 
 # optional list of apps to register on startup
 apps:
